<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="a11y_new_effect_available_indicator">New effect is available</string>
    <string name="a11y_new_effect_indicator">new effect</string>
    <string name="a11y_object_moved_to">%1$s moved to %2$s</string>
    <string name="a11y_object_selected_at">%1$s selected at %2$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_key">about_key</string>
    <string name="accessability_go_to_menu">Go to menu</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_audio_muted">Audio muted</string>
    <string name="accessibility_audio_toggle">Tap to mute or unmute playback audio</string>
    <string name="accessibility_audio_unmuted">Audio unmuted</string>
    <string name="accessibility_autoplay_enabled">Autoplay enabled</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_back_button">Back</string>
    <string name="accessibility_backspace_button">Backspace</string>
    <string name="accessibility_bottom_sheet_close_button">Close</string>
    <string name="accessibility_camera_close_button">Close</string>
    <string name="accessibility_camera_from_player_button">Open Shorts Camera</string>
    <string name="accessibility_captions_button_name">Captions</string>
    <string name="accessibility_captions_toggle">Tap to toggle captions</string>
    <string name="accessibility_captions_unavailable">Captions unavailable</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_icon">Channel icon. Tap to open channel information.</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_chapters_list_button_hint">Double tap to see a list of chapters</string>
    <string name="accessibility_close_ad_button">Close Ad</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="accessibility_closed_captions">Show closed captions menu</string>
    <string name="accessibility_collaborator_card">Collaborator</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_collapse_text">collapse</string>
    <string name="accessibility_decrement_amount">Decrement amount</string>
    <string name="accessibility_dislike_video">Dislike button</string>
    <string name="accessibility_dismiss">Dismiss</string>
    <string name="accessibility_dismiss_chat_video">Dismiss video</string>
    <string name="accessibility_dismiss_tooltip_button">Dismiss tooltip</string>
    <string name="accessibility_drag_handle">Drag handle</string>
    <string name="accessibility_duration_hour">%1$s %2$s %3$s</string>
    <string name="accessibility_duration_minutes">%1$s %2$s</string>
    <string name="accessibility_edit_custom_thumbnail">Edit thumbnail</string>
    <string name="accessibility_end_screen_play_button">Continue Watching</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_enter_vr_mode">Enter virtual reality mode</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_button">See more details about upcoming video</string>
    <string name="accessibility_expand_hats_survey">Expand survey</string>
    <string name="accessibility_expand_text">expand</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_feed_filter_bar_content_description">filters</string>
    <string name="accessibility_filter_view_closed">Filter effects list closed.</string>
    <string name="accessibility_filter_view_selected">%s selected</string>
    <string name="accessibility_filter_view_shown">Filter effects list shown.</string>
    <string name="accessibility_filter_view_unselected">%s unselected</string>
    <string name="accessibility_flashlight_turned_off">Flashlight turned off</string>
    <string name="accessibility_flashlight_turned_on">Flashlight turned on</string>
    <string name="accessibility_floaty_close_button">Close miniplayer</string>
    <string name="accessibility_go_to_channel">Go to channel</string>
    <string name="accessibility_go_to_game_page">Go to game page</string>
    <string name="accessibility_go_to_video">Go to video</string>
    <string name="accessibility_header_postfix">Heading</string>
    <string name="accessibility_help_button">learn more</string>
    <string name="accessibility_help_edit_text_input">More information</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_hide_relateds">Hide related videos</string>
    <string name="accessibility_image_preview">This is the preview you selected</string>
    <string name="accessibility_increment_amount">Increment amount</string>
    <string name="accessibility_info_cards">Show Cards</string>
    <string name="accessibility_learn_more">Learn more</string>
    <string name="accessibility_left_trim_handle">%1$s left trim handle</string>
    <string name="accessibility_like_video">Like button</string>
    <string name="accessibility_list_item_drag_end">Moved item %1$d to position %2$d of %3$d</string>
    <string name="accessibility_list_item_drag_over">%1$d</string>
    <string name="accessibility_list_item_drag_start">Moving item %1$d of %2$d</string>
    <string name="accessibility_map_link">Map of this location</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_miniplayer">Open mini player</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_navigate_up_button">Back to album</string>
    <string name="accessibility_navigation_back_button">Back</string>
    <string name="accessibility_new_content_available">New content available</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_offline_button_cancel">Stop downloading</string>
    <string name="accessibility_offline_button_cannot_save">Can\'t download</string>
    <string name="accessibility_offline_button_remove_playlist">Remove downloaded playlist</string>
    <string name="accessibility_offline_button_remove_video">Remove from downloads</string>
    <string name="accessibility_offline_button_save">Download</string>
    <string name="accessibility_offline_button_sync">Sync new videos</string>
    <string name="accessibility_open_in_external_browser">Open in browser</string>
    <string name="accessibility_open_keyboard_button">Open Keyboard</string>
    <string name="accessibility_overflow">More options</string>
    <string name="accessibility_overflow_menu">More options</string>
    <string name="accessibility_parent_tools_toolbar_back">back</string>
    <string name="accessibility_pause">Pause video</string>
    <string name="accessibility_place_image">Picture of this location</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="application_name">YouTube</string>
    <string name="camera_align_button_label">Align</string>
    <string name="camera_enhance_label">Enhance</string>
    <string name="camera_flip_button_label">Flip</string>
    <string name="camera_green_screen_label">Green screen</string>
    <string name="camera_music_trim_label">Adjust</string>
    <string name="camera_speed_button_label">Speed</string>
    <string name="camera_timer_button_label">Timer</string>
    <string name="inline_global_play_pause_off">Off</string>
    <string name="inline_global_play_pause_on">Always on</string>
    <string name="inline_global_play_pause_on_wifi_only">Wi-Fi only</string>
    <string name="lc_label_landscape">Landscape</string>
    <string name="lc_label_portrait">Portrait</string>
    <string name="lc_orientation_help">More info on screen capture orientation.</string>
    <string name="lc_orientation_text">Orientation</string>
    <string name="lc_thumbnail_stream_in_landscape">Stream in landscape.</string>
    <string name="lc_thumbnail_stream_in_portrait">Stream in portrait.</string>
    <string name="menu_search">Search</string>
    <string name="reel_accessibility_camera_presets_button">Filters</string>
    <string name="reel_edu_continue_text">Tap anywhere to continue</string>
    <string name="reel_edu_next_description">Tap the right side icon</string>
    <string name="reel_edu_next_message">Tap the right side</string>
    <string name="reel_edu_next_title">Next</string>
    <string name="reel_edu_pause_description">Touch and hold icon</string>
    <string name="reel_edu_pause_message">Touch and hold</string>
    <string name="reel_edu_pause_title">Pause</string>
    <string name="reel_edu_previous_description">Tap the left side icon</string>
    <string name="reel_edu_previous_message">Tap the left side</string>
    <string name="reel_edu_previous_title">Previous</string>
    <string name="reel_edu_swipe_description">Swipe icon</string>
    <string name="reel_edu_swipe_message">Swipe left or right</string>
    <string name="reel_edu_swipe_title">Navigate</string>
    <string name="search_hint">Search YouTube</string>
    <string name="shorts_a11y_align_controls">Preview last frame</string>
    <string name="shorts_a11y_flip_camera">Flip camera</string>
    <string name="shorts_a11y_speed_controls">Speed controls</string>
    <string name="shorts_a11y_timer_controls">Timer controls</string>
    <string name="shorts_expandy_collapse_button">Close</string>
    <string name="shorts_expandy_more_button">More</string>
</resources>