<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:id="@+id/reel_edu_group" android:background="@color/reel_black_pure_alpha_80" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="24dp" android:paddingEnd="24dp">
    <RelativeLayout android:id="@+id/reels_edu_actions_list" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/reels_edu_swipe_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp">
            <ImageView android:id="@+id/reels_edu_swipe_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/reel_edu_swipe_description" android:layout_marginEnd="24dp" app:srcCompat="0x7f0802c2"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="16sp" android:textColor="@android:color/white" android:layout_gravity="fill_horizontal" android:id="@+id/reels_edu_swipe_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_swipe_title" android:layout_toEndOf="@+id/reels_edu_swipe_image_view"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_swipe_message" android:layout_below="@+id/reels_edu_swipe_text_view" android:layout_alignStart="@+id/reels_edu_swipe_text_view"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/reels_edu_next_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:layout_below="@+id/reels_edu_swipe_layout" android:layout_alignStart="@+id/reels_edu_swipe_layout">
            <ImageView android:id="@+id/reels_edu_next_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/reel_edu_next_description" android:layout_marginEnd="24dp" app:srcCompat="0x7f0802bf"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="16sp" android:textColor="@android:color/white" android:id="@+id/reels_edu_next_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_next_title" android:layout_toEndOf="@+id/reels_edu_next_image_view"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_next_message" android:layout_below="@+id/reels_edu_next_text_view" android:layout_alignStart="@+id/reels_edu_next_text_view"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/reels_edu_previous_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:layout_below="@+id/reels_edu_next_layout" android:layout_alignStart="@+id/reels_edu_next_layout">
            <ImageView android:id="@+id/reels_edu_previous_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/reel_edu_previous_description" android:layout_marginEnd="24dp" app:srcCompat="0x7f0802c1"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="16sp" android:textColor="@android:color/white" android:id="@+id/reels_edu_previous_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_previous_title" android:layout_toEndOf="@+id/reels_edu_previous_image_view"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_previous_message" android:layout_below="@+id/reels_edu_previous_text_view" android:layout_alignStart="@+id/reels_edu_previous_text_view"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/reels_edu_pause_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40dp" android:layout_below="@+id/reels_edu_previous_layout">
            <ImageView android:id="@+id/reels_edu_pause_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/reel_edu_pause_description" android:layout_marginEnd="24dp" app:srcCompat="0x7f0802c0"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="16sp" android:textColor="@android:color/white" android:id="@+id/reels_edu_pause_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_pause_title" android:layout_toEndOf="@+id/reels_edu_pause_image_view"/>
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_pause_message" android:layout_below="@+id/reels_edu_pause_text_view" android:layout_alignStart="@+id/reels_edu_pause_text_view"/>
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textColor="@android:color/white" android:gravity="center" android:id="@+id/reels_edu_dismiss_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reel_edu_continue_text" android:layout_below="@+id/reels_edu_actions_list" android:textAlignment="center" android:layout_alignStart="@+id/reels_edu_actions_list" android:layout_alignEnd="@+id/reels_edu_actions_list"/>
</RelativeLayout>
