<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="end|top" android:id="@+id/shorts_camera_toolbar" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent" android:importantForAccessibility="yes">
    <View android:id="@+id/expanded_toolbar_scrim" android:background="?attr/ytOverlayBackgroundMedium" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <RelativeLayout android:layout_gravity="end" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/shorts_camera_compact_toolbar_padding_top">
        <View android:layout_gravity="end" android:id="@+id/collapsed_toolbar_scrim" android:background="@drawable/shorts_camera_toolbar_background" android:layout_width="@dimen/shorts_camera_compact_toolbar_button_size" android:layout_height="wrap_content" android:layout_alignTop="@+id/button_scroller" android:layout_alignBottom="@+id/button_scroller" android:layout_marginEnd="@dimen/shorts_multi_segment_progress_bar_edge_margin" android:layout_alignEnd="@+id/button_scroller"/>
        <ScrollView android:scrollbarThumbVertical="@null" android:id="@+id/button_scroller" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentStart="true">
            <LinearLayout android:gravity="end|top" android:orientation="vertical" android:id="@+id/shorts_camera_toolbar_buttons" android:background="@android:color/transparent" android:visibility="visible" android:clipChildren="false" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_flip_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_a11y_flip_camera" app:buttonText="@string/camera_flip_button_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_arrow_flip" app:veType="SHORTS_CREATION_SWITCH_CAMERA_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_speed_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_a11y_speed_controls" app:buttonText="@string/camera_speed_button_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_speed_1x_stroke" app:veType="SHORTS_CREATION_SPEED_CONTROL_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_timer_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_a11y_timer_controls" app:buttonText="@string/camera_timer_button_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_stopwatch" app:veType="SHORTS_CREATION_RECORDING_TIMER_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_preset_filter_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/reel_accessibility_camera_presets_button" app:buttonText="@string/reel_accessibility_camera_presets_button" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_filter_off_stroke" app:veType="SHORTS_CREATION_FILTERS_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_camera_retouch_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/camera_enhance_label" app:buttonText="@string/camera_enhance_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_retouch_off" app:newFeatureTag="enhance" app:veType="SHORTS_CREATION_ENHANCE_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_camera_green_screen_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/camera_green_screen_label" app:buttonText="@string/camera_green_screen_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_green_screen_off" app:newFeatureTag="green_screen" app:veType="SHORTS_CREATION_GREEN_SCREEN_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_camera_trim_music_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/camera_music_trim_label" app:buttonText="@string/camera_music_trim_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_music_trim_v2" app:veType="SHORTS_CREATION_CAMERA_AUDIO_SCRUBBER_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_align_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_a11y_align_controls" app:buttonText="@string/camera_align_button_label" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_camera_align_button_off_v2" app:veType="SHORTS_CREATION_OVERLAY_BUTTON"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_camera_top_relight_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:editorButtonLayout="1" app:iconDrawable="0x7f080a67"/>
                <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_expandy_toolbar_more" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_expandy_more_button" app:buttonText="@string/shorts_expandy_more_button" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_expandy_expand" app:veType="SHORTS_CREATION_TOOLBELT_EXPAND_BUTTON"/>
                <LinearLayout android:gravity="end" android:layout_gravity="end" android:orientation="vertical" android:id="@+id/shorts_camera_toolbar_expanded_buttons" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:id="@+id/shorts_camera_bottom_relight_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:editorButtonLayout="1" app:iconDrawable="0x7f080a67" app:newFeatureTag="relight"/>
                    <com.google.android.apps.youtube.app.extensions.reel.edit.presenter.EditorButtonView android:layout_gravity="end" android:id="@+id/shorts_expandy_toolbar_collapse" android:layout_width="wrap_content" android:layout_height="wrap_content" app:buttonContentDescription="@string/shorts_expandy_collapse_button" app:buttonText="@string/shorts_expandy_collapse_button" app:editorButtonLayout="1" app:iconDrawable="@drawable/ic_expandy_collapse" app:veType="SHORTS_CREATION_TOOLBELT_COLLAPSE_BUTTON"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
