<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/set_content_header" android:background="?attr/ytBrandBackgroundPrimary" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.google.android.apps.youtube.app.watch.panel.ui.PlaylistLoopButtonView android:id="@+id/repeat" android:background="?attr/ytTouchFeedbackRectangle" android:padding="12dp" android:layout_width="48dp" android:layout_height="48dp" android:contentDescription="@string/accessibility_repeat" android:layout_marginStart="4dp"/>
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:id="@+id/shuffle" android:background="?attr/ytTouchFeedbackRectangle" android:padding="12dp" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/playlist_shuffle_button" android:contentDescription="@string/accessibility_shuffle" android:layout_marginStart="8dp"/>
    <Space android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>
    <ImageView android:id="@+id/three_dots_menu" android:background="?attr/ytTouchFeedbackRectangle" android:layout_width="32dp" android:layout_height="48dp" android:src="0x7f080aaa" android:scaleType="fitCenter" android:tint="?attr/ytIconActiveOther" android:contentDescription="@string/accessibility_menu" android:paddingStart="4dp" android:paddingEnd="4dp"/>
</LinearLayout>
