<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/lc_thumbnail_orientation_text_size" android:gravity="center_vertical" android:id="@+id/orientation_text" android:layout_width="wrap_content" android:layout_height="40dp" android:text="@string/lc_orientation_text" android:maxLines="1" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/lc_thumbnail_orientation_margin" yt:layout_constraintStart_toStartOf="0" yt:layout_constraintTop_toTopOf="0" yt:robotoFont="0"/>
    <ImageButton android:id="@+id/help_button" android:background="?attr/selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="@dimen/edit_image_button_24dp_container_size" android:layout_height="@dimen/edit_image_button_24dp_container_size" android:src="0x7f080719" android:contentDescription="@string/lc_orientation_help" yt:layout_constraintStart_toEndOf="@+id/orientation_text" yt:layout_constraintTop_toTopOf="0"/>
    <RelativeLayout android:id="@+id/landscape_button" android:background="@drawable/lc_orientation_button" android:layout_width="0dp" android:layout_height="@dimen/lc_thumbnail_orientation_button_height" android:layout_marginTop="@dimen/lc_thumbnail_orientation_margin" android:foregroundGravity="center" android:contentDescription="@string/lc_thumbnail_stream_in_landscape" android:layout_marginStart="@dimen/lc_thumbnail_orientation_margin" yt:layout_constraintEnd_toStartOf="@+id/portrait_button" yt:layout_constraintHorizontal_bias="0.5" yt:layout_constraintStart_toStartOf="0" yt:layout_constraintTop_toBottomOf="@+id/orientation_text">
        <ImageView android:id="@+id/landscape_button_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/lc_phone_landscape" android:layout_centerInParent="true" android:contentDescription="@null" android:layout_toStartOf="@+id/landscape_button_text"/>
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTube.Button" android:textSize="@dimen/small_title_text_size" android:ellipsize="end" android:id="@+id/landscape_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lc_label_landscape" android:maxLines="1" android:layout_centerInParent="true" android:contentDescription="@null" android:layout_marginStart="8dp" yt:robotoFont="0"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/portrait_button" android:background="@drawable/lc_orientation_button" android:layout_width="0dp" android:layout_height="@dimen/lc_thumbnail_orientation_button_height" android:layout_marginTop="@dimen/lc_thumbnail_orientation_margin" android:foregroundGravity="center" android:contentDescription="@string/lc_thumbnail_stream_in_portrait" android:layout_marginEnd="@dimen/lc_thumbnail_orientation_margin" yt:layout_constraintEnd_toEndOf="0" yt:layout_constraintHorizontal_bias="0.5" yt:layout_constraintStart_toEndOf="@+id/landscape_button" yt:layout_constraintTop_toBottomOf="@+id/orientation_text">
        <ImageView android:id="@+id/portrait_button_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="0x7f08078e" android:layout_centerInParent="true" android:contentDescription="@null" android:layout_toStartOf="@+id/portrait_button_text"/>
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="@style/TextAppearance.YouTube.Button" android:textSize="@dimen/small_title_text_size" android:ellipsize="end" android:id="@+id/portrait_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lc_label_portrait" android:maxLines="1" android:layout_centerInParent="true" android:contentDescription="@null" android:layout_marginStart="8dp" yt:robotoFont="0"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
