<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/search_bar" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/youtube_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="0x7f080a0f" android:layout_centerVertical="true" android:contentDescription="@string/application_name"/>
    <ImageView android:id="@+id/youtube_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?attr/ytWordmarkText" android:layout_centerVertical="true" android:contentDescription="@string/application_name" android:layout_toEndOf="@+id/youtube_logo"/>
    <TextView android:textAppearance="@style/ThemeOverlay.YouTube.ActionBar.Title.Search" android:textSize="@dimen/medium_font_size" android:textColor="?attr/ytTextSecondary" android:gravity="start|center_vertical" android:id="@+id/search_box" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/search_hint" android:singleLine="true" android:textAlignment="viewStart" android:paddingStart="8dp" android:paddingEnd="48dp" android:layout_marginStart="12dp" android:layout_toEndOf="@+id/youtube_logo"/>
    <android.support.v7.widget.AppCompatImageView android:id="@+id/search_icon" android:background="?attr/actionBarItemBackground" android:focusable="true" android:clickable="true" android:layout_width="48dp" android:layout_height="48dp" android:src="0x7f08033c" android:scaleType="centerInside" android:tint="?attr/ytHeaderIcon" android:layout_centerVertical="true" android:contentDescription="@string/menu_search" android:layout_alignParentEnd="true"/>
</RelativeLayout>
